some pages with out header

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -5,11 +5,10 @@
         grid-gap: 30px;
         /*margin: 3rem .625rem .625rem .625rem;*/
     }
-    
-    div.sc-dnqmqq.eqbQdD {
+    /* div.sc-dnqmqq.eqbQdD {
         padding: 0;
         margin: 0;
-    }
+    } */
     
     .grid {
         padding: 10px;
